changed photos to custom content and corrected spacing in body
changed photos to custom content and corrected spacing in body

--- a/Assets/CSS/stylesheet.css
+++ b/Assets/CSS/stylesheet.css
@@ -11,16 +11,16 @@
   --darkblue: rgb(68, 88, 119);
 }
 
-.header {
+header {
   background-color: var(--gray);
-
+  width: 100%;
   height: 75px;
 }
 
 h1 {
   color: var(--gray);
   background-color: var(--lightblue);
-  width: 220px;
+  width: 250px;
   text-align: right;
 }
 
@@ -29,7 +29,7 @@ ul {
   list-style-type: none;
   overflow: hidden;
   padding-bottom: 15px;
-  margin-right: 100px;
+  margin-right: 75px;
 }
 
 li {
@@ -37,11 +37,13 @@ li {
 }
 
 li a {
-  padding: 8px;
+  font-size: 18px;
   color: var(--lightblue);
   font-family: helvetica;
-  font-size: 18px;
-  text-decoration: underline;
+  border-bottom: 3px solid var(--lightblue);
+  text-decoration: none;
+  padding: 0 10px 3px 10px;
+  margin-left: 5px;
 }
 
 li a:hover {
@@ -50,19 +52,19 @@ li a:hover {
 }
 
 .banner-image {
-  height: 37%;
+  /* height: 300px; */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
-  /* max-width: 100%; */
+  width: 100%;
 }
 
 .banner-text {
   text-align: right;
   position: absolute;
-  top: 85%;
-  right: 10%;
+  top: 70%;
+  right: 5%;
   font-size: 25px;
   color: var(--gray);
   background-color: var(--lightblue);
@@ -71,35 +73,92 @@ li a:hover {
 
 #container {
   background-color: var(--bgcolor);
-  padding: 0;
+  width: 80%;
+  left: 10%;
+  position: absolute;
 }
 
 h2 {
   text-align: right;
-  width: 125px;
-  /* flex-direction: row; */
-  /* flex-wrap: wrap; */
-  font-size: 35px;
   color: var(--darkblue);
-  margin-left: 50px;
+  padding-right: 20px;
 }
 
-p,
-.work,
-.contact {
+.content-text p,
+.work {
   text-align: left;
-  padding: 5px;
-  margin-left: 195px;
-  width: 82%;
-  background-color: pink; /* placeholder color */
+  padding-left: 15px;
   color: var(--darkblue);
   font-size: 15px;
+  position: relative;
 }
 
-.img1 {
-  max-width: 500px;
+.work {
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.work img {
+.img100 {
+  width: calc(100% - 26px);
+  opacity: 50%;
+}
+
+.img100:hover,
+.img50:hover {
+  opacity: 100%;
+  transition: 0.3s;
+}
+.img50 {
+  width: calc(50% - 26px);
+  opacity: 50%;
+}
+
+.img-content {
   border: 5px solid var(--lightblue);
+  margin: 8px;
+}
+.content-flex {
+  display: flex;
+}
+
+.content-title {
+  width: 15%;
+  border-right: 5px solid var(--darkblue);
+  font-size: 26px;
+  text-align: right;
+}
+.content-box {
+  width: 85%;
+  float: left;
+  padding-left: 18px;
+}
+
+.content-contact p {
+  display: inline;
+  border-bottom: 3px solid var(--darkblue);
+  color: var(--darkblue);
+  font-weight: bold;
+  margin: 35px;
+  text-align: center;
+  padding: 5px;
+}
+
+.content-contact {
+  width: 100%;
+  display: inline-flex;
+  justify-content: space-between;
+  font-size: 18px;
+}
+
+/* NEED TO UPDATE  */
+
+@media screen and (max-width: 992px) {
+}
+
+/* Large smartphones */
+@media screen and (max-width: 768px) {
+}
+
+/* Small smartphones  */
+@media screen and (max-width: 576px) {
 }
